# Pyro-based_Bayesian_HMM

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
bayesian-hmm-env/: pyvenv.cfg
notebooks/: anomaly_detection_demo.ipynb
src/: __init__.py  metrics.py  preprocessing.py  pyroBayesianHMM.py
tests/: conftest.py  requirements-test.txt  test_metrics.py  test_preprocessing.py  test_pyro_bayesian_hmm.py
